[package]
name = "brp-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
binrw = "0.11"
thiserror = "1"
tokio = { version = "1.32", features = ["full"], optional = true }

[features]
async = ["dep:tokio"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
